# carta-casacore

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
debian/: README.Debian  carta-casacore-dev.install  changelog  control  copyright  libcartacasacore.install  rules
debian/patches/: End-Of-File-Char.patch  fix_variant.diff  series
imageanalysis/: Annotations  CMakeLists.txt  ComponentModels  IO  ImageAnalysis  ImageAnalysis.h  ImageTypedefs.h  Images  Regions  SpectralComponents  StdCasa  Utilities
imageanalysis/apps/: CMakeLists.txt  imcollapse.cc  imfit.cc
